
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:id="@+id/maps_fragment"
    tools:context="com.hwhollywu.mobileproject.MapsFragment">

    <LinearLayout
        android:paddingTop="20dp"
        android:id="@+id/layoutDistanceData"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/layoutSteps"
        android:weightSum="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvSteps"
            android:text="@string/tvSteps"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvStepCounter"
            android:layout_gravity="center"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/layoutMiles"
        android:weightSum="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvMiles"
            android:text="@string/miles"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvMileCounter"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGoalData"
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:gravity="center"
            android:id="@+id/layoutPercent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPercent"
                android:text="@string/goal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvPercentCounter"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:weightSum="2"
        android:id="@+id/layoutCoins"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCoins"
            android:text="@string/coins_earned"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tvCoinCounter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="0"/>
    </LinearLayout>
        </LinearLayout>


<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/layoutWalkButtons">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnStart"
            android:text="Start"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnEnd"
            android:text="End"/>

    </LinearLayout>

</LinearLayout>